# kiot

./: CMakeLists.txt  DEVELOPMENT.md  README.md  component.h  components.cpp  components.h  core.cpp  core.h  dbusproperty.cpp  dbusproperty.h  login1_manager_interface.cpp  main.cpp  net.davidedmundson.kde-ha.desktop.in  org.davidedmundson.kiot.desktop.in
integrations/: CMakeLists.txt  accentcolour.cpp  active.cpp  camera.cpp  components.cpp  components.h  dndstate.cpp  lockedstate.cpp  nightmode.cpp  notifications.cpp  scripts.cpp  shortcuts.cpp  suspend.cpp
